# AI-GF

./: .env.sample  Day_1.ipynb  README.md  main.py  pyproject.toml
src/: gemini_call.py  gemini_tts.py  gpt_call.py  playai_call.py
